--- a/src/component/UserCart.css
+++ b/src/component/UserCart.css
@@ -2,7 +2,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 500px;
 }
 
 .cart-main {
@@ -14,8 +13,9 @@ body {
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-h2 {
+h1 {
   text-align: center;
+  letter-spacing: 3px;
 }
 
 .count-amount {
@@ -26,6 +26,22 @@ h2 {
 }
 
 .count-amount span {
+  padding: 3px 5px;
+  background-color: darkslategray;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  text-transform: capitalize;
+}
+
+.count-quantity {
+  text-align: center;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.count-quantity span {
   padding: 3px 5px;
   background-color: darkslategray;
   border-radius: 5px;
@@ -77,11 +93,11 @@ table {
 }
 
 .th-myCart {
-  width: 180px;
+  width: 200px;
   text-align: left;
 }
 .my-cart {
-  width: 180px;
+  width: 200px;
   text-align: left;
   font-family: 'inter', sans-serif;
   color: darkblue;
@@ -89,19 +105,20 @@ table {
 }
 
 .th-cart-keys {
-  width: 180px;
+  width: 210px;
   text-align: center;
 }
 .my-cart-button {
-  width: 180px;
+  width: 210px;
+  text-align: center;
 }
 
 .th-amount {
-  width: 100px;
+  width: 80px;
   text-align: left;
 }
 .carts-body td span {
-  width: 100px;
+  width: 80px;
   padding: 5px 10px;
   background-color: rgb(250, 250, 5);
   color: black;
